Fixed scrolling issue on mobile.

--- a/frontend/src/Components/Profile/Profile.css
+++ b/frontend/src/Components/Profile/Profile.css
@@ -11,7 +11,6 @@
   height: 100%;
 
   transition: transform 0.1s ease;
-  touch-action: none;
 }
 
 #profile-page[draggable='true'] {
@@ -68,5 +67,10 @@
     padding-bottom: 100px;
     box-sizing: border-box;
     gap: 50px;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  #root {
+    overflow: visible;
   }
 }
